# hipchat-hs

./: .gitignore  LICENSE  hipchat-hs.cabal  stack.yaml
lib/HipChat/: Client.hs
lib/HipChat/AddonPersistence/: Store.hs
lib/HipChat/Types/: API.hs  Auth.hs  Common.hs  Dialog.hs  Extensions.hs  ExternalPage.hs  Glance.hs  I18n.hs  Icon.hs  InstallInfo.hs  Key.hs  Name.hs  RoomAddonUIUpdateRequest.hs  Rooms.hs  TokenRequest.hs  TokenResponse.hs  User.hs  WebPanel.hs  Webhook.hs
lib/HipChat/Types/Rooms/: CreateRoomRequest.hs  CreateRoomResponse.hs  CreateWebhookRequest.hs  CreateWebhookResponse.hs  GetAllMembersResponse.hs  GetAllRoomsResponse.hs
lib/Network/HipChat/: Client.hs
lib/Network/HipChat/Types/: API.hs  Rooms.hs  TokenRequest.hs  TokenResponse.hs
lib/Network/Hipchat/Types/: Common.hs  Extensions.hs  User.hs
lib/Network/Hipchat/Types/Rooms/: CreateRoomRequest.hs  CreateRoomResponse.hs  CreateWebhookRequest.hs  CreateWebhookResponse.hs  GetAllMembersResponse.hs
