name:                hipchat-hs
version:             0.0.1
synopsis:            HipChat API bindings in Haskell
description:         HipChat API bindings in Haskell 
license:             BSD3
license-file:        LICENSE
author:              Oswyn Brent <oztastic703@gmail.com>
maintainer:          oztastic703@gmail.com
copyright:           Oswyn Brent 2015
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository HEAD
  type: git
  location: https://github.com/oswynb/hipchat-hs

library
  exposed-modules:     Network.HipChat.Client
                       Network.HipChat.Types.API
                       Network.HipChat.Types.Rooms
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.8 && < 4.9
                     , aeson
                     , bytestring
                     , either
                     , servant
                     , servant-client
                     , string-conversions
                     , text
  hs-source-dirs:      lib
  default-language:    Haskell2010
