name:                hipchat-hs
version:             0.0.2
synopsis:            Hipchat API bindings in Haskell
description:         Hipchat API bindings in Haskell 
license:             BSD3
license-file:        LICENSE
author:              Oswyn Brent <oztastic703@gmail.com>
maintainer:          oztastic703@gmail.com
copyright:           Oswyn Brent 2015
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository HEAD
  type: git
  location: https://github.com/oswynb/hipchat-hs

library
  exposed-modules:     HipChat.Client
                       HipChat.Types.API
                       HipChat.Types.Common
                       HipChat.Types.Dialog
                       HipChat.Types.Extensions
                       HipChat.Types.Glance
                       HipChat.Types.Icon
                       HipChat.Types.Key
                       HipChat.Types.Name
                       HipChat.Types.Rooms
                       HipChat.Types.TokenRequest
                       HipChat.Types.TokenResponse
                       HipChat.Types.User
                       HipChat.Types.WebPanel

  other-modules:       
                       -- Rooms
                       HipChat.Types.Rooms.CreateRoomRequest
                       HipChat.Types.Rooms.CreateRoomResponse
                       HipChat.Types.Rooms.CreateWebhookRequest
                       HipChat.Types.Rooms.CreateWebhookResponse
                       HipChat.Types.Rooms.GetAllMembersResponse
                       HipChat.Types.Rooms.GetAllRoomsResponse
  -- other-extensions:    
  build-depends:       base >= 4.8 && < 4.9
                     , aeson >= 0.11
                     , aeson-casing
                     , async
                     , bytestring
                     , either
                     , lens
                     , network-uri >= 2.6
                     , servant
                     , servant-client
                     , split
                     , string-conversions
                     , text
                     , time
  hs-source-dirs:      lib
  ghc-options:         -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
